--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,12 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: Food_App_production
+#   username: Food_App
+#   password: <%= ENV["FOOD_APP_DATABASE_PASSWORD"] %>
+
 production:
   <<: *default
-  database: Food_App_production
-  username: Food_App
-  password: <%= ENV["FOOD_APP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
