--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: Food_App_Production
+    databaseName: food_app_production
+    user: food_app_production_user
 
 services:
   - type: web
-    name: mysite
+    name: Food_App
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name: food_app_production
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
